force-app/main/default/objects/Sales_Order__c/fields/Axle_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Axle_Ratio__c</fullName>
    <label>Axle Ratio</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>