force-app/main/default/objects/Sales_Order__c/fields/Battery_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Battery_Configuration__c</fullName>
    <label>Battery Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mode__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Battery_Configuration</valueSetName>
    </valueSet>
</CustomField>