force-app/main/default/objects/Sales_Order__c/fields/Brakes__c.field-meta.xml
<CustomField>
    <fullName>Brakes__c</fullName>
    <label>Brakes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disc</fullName>
            </value>
            <value>
                <fullName>Drum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>