force-app/main/default/objects/Sales_Order__c/fields/Bus_Photos_Date__c.field-meta.xml
<CustomField>
    <fullName>Bus_Photos_Date__c</fullName>
    <label>Bus Photos Date</label>
    <type>Date</type>
</CustomField>