force-app/main/default/objects/Sales_Order__c/fields/Bus_Photos_Identical_To__c.field-meta.xml
<CustomField>
    <fullName>Bus_Photos_Identical_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus Photos Identical To</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Sales Orders (Bus Photos Identical To)</relationshipLabel>
    <relationshipName>Sales_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>