force-app/main/default/objects/Sales_Order__c/fields/Bus_Photos_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bus_Photos_Notes__c</fullName>
    <label>Bus Photos Notes</label>
    <type>TextArea</type>
</CustomField>