force-app/main/default/objects/Sales_Order__c/fields/Bus_Photos_Processor__c.field-meta.xml
<CustomField>
    <fullName>Bus_Photos_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus Photos Processor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>