force-app/main/default/objects/Sales_Order__c/fields/Bus_Photos_SN_Captured__c.field-meta.xml
<CustomField>
    <fullName>Bus_Photos_SN_Captured__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus Photos SN Captured</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>