force-app/main/default/objects/Sales_Order__c/fields/Charging_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Charging_Configuration__c</fullName>
    <label>Charging Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mode__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) Plug-in</fullName>
            </value>
            <value>
                <fullName>(2) Plug-in</fullName>
            </value>
            <value>
                <fullName>(1) Plug-in w/ Opp Charge</fullName>
            </value>
            <value>
                <fullName>(2) Plug-in w/ Opp Charge</fullName>
            </value>
            <value>
                <fullName>(1) Plug-in w/Momentum Dynamics</fullName>
                <label>(1) Plug-in w/ InductEV</label>
            </value>
            <value>
                <fullName>(2) Plug-in w/Momentum Dynamics</fullName>
                <label>(2) Plug-in w/ InductEV</label>
            </value>
            <value>
                <fullName>(1) Plug-in w/Wave Air-Cooled</fullName>
                <isActive>false</isActive>
                <label>(1) Plug-in w/Wave Air-Cooled</label>
            </value>
            <value>
                <fullName>(2) Plug-in w/Wave Air-Cooled</fullName>
                <isActive>false</isActive>
                <label>(2) Plug-in w/Wave Air-Cooled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>