force-app/main/default/objects/Sales_Order__c/fields/Chassis_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Manufacturer__c</fullName>
    <label>Chassis Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hogan</fullName>
            </value>
            <value>
                <fullName>Imperial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>