force-app/main/default/objects/Sales_Order__c/fields/Clear_Coat__c.field-meta.xml
<CustomField>
    <fullName>Clear_Coat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear Coat</label>
    <type>Checkbox</type>
</CustomField>