force-app/main/default/objects/Sales_Order__c/fields/CNG_Inflation__c.field-meta.xml
<CustomField>
    <fullName>CNG_Inflation__c</fullName>
    <label>CNG Inflation</label>
    <summarizedField>Sales_Order_Inflation__c.CNG_Inflation__c</summarizedField>
    <summaryForeignKey>Sales_Order_Inflation__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>