force-app/main/default/objects/Sales_Order__c/fields/Contract_Option__c.field-meta.xml
<CustomField>
    <fullName>Contract_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Option</label>
    <referenceTo>Contract_Option__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>