force-app/main/default/objects/Sales_Order__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>IFB</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Piggyback</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>