force-app/main/default/objects/Sales_Order__c/fields/Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Control_Number__c</fullName>
    <description>Lotus Notes Order CTRL #</description>
    <externalId>true</externalId>
    <label>Control Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>