force-app/main/default/objects/Sales_Order__c/fields/Current_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Net_Revenue__c</fullName>
    <formula>Current_Price__c - Current_Tax__c - Spare_Tooling_Budget__c - Training_Revenue_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>