force-app/main/default/objects/Sales_Order__c/fields/Current_Price_vs_PO__c.field-meta.xml
<CustomField>
    <fullName>Current_Price_vs_PO__c</fullName>
    <formula>PO_Amount__c -( Current_Price__c *  Quantity__c )</formula>
    <label>Current Price vs PO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>