force-app/main/default/objects/Sales_Order__c/fields/Current_Sales_Price_Excluding_Tax__c.field-meta.xml
<CustomField>
    <fullName>Current_Sales_Price_Excluding_Tax__c</fullName>
    <description>Current Sales Price (ex-Tax, Training, Spares)</description>
    <formula>Current_Price__c - Current_Tax__c -  Spare_Tooling_Budget__c -  Training_Revenue_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Sales Price (with Exclusions)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>