force-app/main/default/objects/Sales_Order__c/fields/Current_Tax__c.field-meta.xml
<CustomField>
    <fullName>Current_Tax__c</fullName>
    <label>Current Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>