force-app/main/default/objects/Sales_Order__c/fields/Customer_Legacy_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Legacy_Status__c</fullName>
    <label>Customer Legacy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customer</fullName>
                <default>true</default>
                <label>New Customer</label>
            </value>
            <value>
                <fullName>Return Customer</fullName>
            </value>
            <value>
                <fullName>New Mode for Existing Customer</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>