force-app/main/default/objects/Sales_Order__c/fields/Dash_Layou__c.field-meta.xml
<CustomField>
    <fullName>Dash_Layou__c</fullName>
    <label>Dash Layout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Customer Review</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>