force-app/main/default/objects/Sales_Order__c/fields/Deliver_No_Later_Than__c.field-meta.xml
<CustomField>
    <fullName>Deliver_No_Later_Than__c</fullName>
    <label>Deliver No Later Than</label>
    <type>Date</type>
</CustomField>