force-app/main/default/objects/Sales_Order__c/fields/Delivery_Incidentals__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Incidentals__c</fullName>
    <formula>IF( text(Mode__c) = &quot;CNG&quot;, 
( 
IF(text(Length__c) = &quot;29&quot;, Margin_Assumption__r.CNG_29_Delivery_Incidentals__c, 
IF(text(Length__c) = &quot;35&quot;, Margin_Assumption__r.CNG_35_Delivery_Incidentals__c, 
IF(text(Length__c) = &quot;40&quot;, Margin_Assumption__r.CNG_40_Delivery_Incidentals__c, 0) ) ) 
), 
IF(text(Mode__c) = &quot;Diesel&quot;, 
( 
IF(text(Length__c) = &quot;29&quot;, Margin_Assumption__r.Diesel_29_Delivery_Incidentals__c, 
IF(text(Length__c) = &quot;35&quot;, Margin_Assumption__r.Diesel_35_Delivery_Incidentals__c, 
IF(text(Length__c) = &quot;40&quot;, Margin_Assumption__r.Diesel_40_Delivery_Incidentals__c, 0) ) ) 
), 
IF(contains(text(Mode__c),&quot;Hybrid&quot;) , 
( 
IF(text(Length__c) = &quot;29&quot;, Margin_Assumption__r.Hybrid_29_Delivery_Incidentals__c, 
IF(text(Length__c) = &quot;35&quot;, Margin_Assumption__r.Hybrid_35_Delivery_Incidentals__c, 
IF(text(Length__c) = &quot;40&quot;, Margin_Assumption__r.Hybrid_40_Delivery_Incidentals__c, 0) ) ) 
), 
IF(text(Mode__c) = &quot;Electric&quot;, 
( 
IF(text(Length__c) = &quot;29&quot;, Margin_Assumption__r.Electric_29_Delivery_Incidentals__c, 
IF(text(Length__c) = &quot;35&quot;, Margin_Assumption__r.Electric_35_Delivery_Incidentals__c, 
IF(text(Length__c) = &quot;40&quot;, Margin_Assumption__r.Electric_40_Delivery_Incidentals__c, 0) ) ) 
),0 
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Incidentals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>