force-app/main/default/objects/Sales_Order__c/fields/Driver_s_Handbook_Active_Days__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_Handbook_Active_Days__c</fullName>
    <label>DRV Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>