force-app/main/default/objects/Sales_Order__c/fields/Driver_s_Handbook_FTP_Date__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_Handbook_FTP_Date__c</fullName>
    <label>Driver&apos;s Handbook FTP Date</label>
    <type>Date</type>
</CustomField>