force-app/main/default/objects/Sales_Order__c/fields/Driver_s_Handbook_Notes__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_Handbook_Notes__c</fullName>
    <label>DRV Notes</label>
    <type>TextArea</type>
</CustomField>