force-app/main/default/objects/Sales_Order__c/fields/Driver_s_Manual_Hard_Copies_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_Manual_Hard_Copies_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver&apos;s Manual Hard Copy Not Required</label>
    <type>Checkbox</type>
</CustomField>