force-app/main/default/objects/Sales_Order__c/fields/Driver_s_Manual_Shipped_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_Manual_Shipped_Tracking__c</fullName>
    <label>Driver&apos;s Manual Shipped Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>