force-app/main/default/objects/Sales_Order__c/fields/Drivers_Handbook_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Handbook_Completion_Date__c</fullName>
    <label>Drivers Handbook Completion Date</label>
    <type>Date</type>
</CustomField>