force-app/main/default/objects/Sales_Order__c/fields/Drivers_Handbook_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Handbook_Due_Date__c</fullName>
    <formula>CASE(
MOD( Start_Date__c  - DATE(1900, 1, 7), 7),
0, (Start_Date__c ) + 20 + FLOOR((20-1)/5)*2,
1, (Start_Date__c ) + 20 + FLOOR((20)/5)*2,
2, (Start_Date__c ) + 20 + FLOOR((20+1)/5)*2,
3, (Start_Date__c ) + 20 + FLOOR((20+2)/5)*2,
4, (Start_Date__c ) + 20 + FLOOR((20+3)/5)*2,
5, (Start_Date__c ) + 20 + CEILING((20)/5)*2,
6, (Start_Date__c ) - IF(20&gt;0,1,0) + 20 + CEILING((20)/5)*2,
null)</formula>
    <label>Drivers Handbook Due Date</label>
    <type>Date</type>
</CustomField>