force-app/main/default/objects/Sales_Order__c/fields/Drivers_Handbook_Processor__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Handbook_Processor__c</fullName>
    <label>DRV Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Publications_Order_Processors</valueSetName>
    </valueSet>
</CustomField>