force-app/main/default/objects/Sales_Order__c/fields/Drivers_Manual_Creator__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Manual_Creator__c</fullName>
    <label>Drivers Manual Creator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Publications_Order_Processors</valueSetName>
    </valueSet>
</CustomField>