force-app/main/default/objects/Sales_Order__c/fields/Drivers_Manual_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Manual_Processed_Date__c</fullName>
    <label>Drivers Manual Processed Date</label>
    <type>Date</type>
</CustomField>