force-app/main/default/objects/Sales_Order__c/fields/Drivers_Manual_Processing_Hours__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Manual_Processing_Hours__c</fullName>
    <label>Drivers Manual Processing Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>