force-app/main/default/objects/Sales_Order__c/fields/DRV_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>DRV_Reason_Code__c</fullName>
    <label>DRV Reason Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pubs_Reason_Codes</valueSetName>
    </valueSet>
</CustomField>