force-app/main/default/objects/Sales_Order__c/fields/DVR_Days__c.field-meta.xml
<CustomField>
    <fullName>DVR_Days__c</fullName>
    <inlineHelpText>Time spent helping primary manual creator.</inlineHelpText>
    <label>DRV Days Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>