force-app/main/default/objects/Sales_Order__c/fields/DVR_Days_Late__c.field-meta.xml
<CustomField>
    <fullName>DVR_Days_Late__c</fullName>
    <formula>If(  ISBLANK( Drivers_Handbook_Completion_Date__c ),null,

if( Drivers_Handbook_Completion_Date__c -  TW_Ship_Due_Date__c  &lt;0,0, Drivers_Handbook_Completion_Date__c -  TW_Ship_Due_Date__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DRV Days Late</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>