force-app/main/default/objects/Sales_Order__c/fields/DVR_Days_Total__c.field-meta.xml
<CustomField>
    <fullName>DVR_Days_Total__c</fullName>
    <formula>Driver_s_Handbook_Active_Days__c  +  DVR_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DRV Days Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>