force-app/main/default/objects/Sales_Order__c/fields/DVR_File_List__c.field-meta.xml
<CustomField>
    <fullName>DVR_File_List__c</fullName>
    <label>DRV File List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>