force-app/main/default/objects/Sales_Order__c/fields/DVR_Helper__c.field-meta.xml
<CustomField>
    <fullName>DVR_Helper__c</fullName>
    <label>DRV Helper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Publications_Order_Processors</valueSetName>
    </valueSet>
</CustomField>