force-app/main/default/objects/Sales_Order__c/fields/DVR_Helper_Notes__c.field-meta.xml
<CustomField>
    <fullName>DVR_Helper_Notes__c</fullName>
    <inlineHelpText>Brief description of task, i.e., &quot;file selection&quot; or &quot;condensing/PDFing&quot;.</inlineHelpText>
    <label>DRV Helper Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>