force-app/main/default/objects/Sales_Order__c/fields/DVR_Status__c.field-meta.xml
<CustomField>
    <fullName>DVR_Status__c</fullName>
    <inlineHelpText>Indicate numeric priority order + brief status notes like &quot;on hold for xx&quot; or &quot;ECD xx&quot;</inlineHelpText>
    <label>DRV Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>