force-app/main/default/objects/Sales_Order__c/fields/Electric_Inflation__c.field-meta.xml
<CustomField>
    <fullName>Electric_Inflation__c</fullName>
    <label>Electric Inflation</label>
    <summarizedField>Sales_Order_Inflation__c.Electric_inflation__c</summarizedField>
    <summaryForeignKey>Sales_Order_Inflation__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>