force-app/main/default/objects/Sales_Order__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <label>Engine</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mode__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Cummins L9 8.9 Liter</fullName>
            </value>
            <value>
                <fullName>Cummins L9N 8.9 Liter</fullName>
            </value>
            <value>
                <fullName>Cummins B6.7 6.7 Liter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>