force-app/main/default/objects/Sales_Order__c/fields/Engineering_Order_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Order_Release_Date__c</fullName>
    <label>Engineering Order Release Date</label>
    <type>Date</type>
</CustomField>