force-app/main/default/objects/Sales_Order__c/fields/Engineering_SO_Release_Due__c.field-meta.xml
<CustomField>
    <fullName>Engineering_SO_Release_Due__c</fullName>
    <formula>Start_Date__c -168</formula>
    <label>Engineering SO Release Due</label>
    <type>Date</type>
</CustomField>