force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Base_Materials__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Base_Materials__c</fullName>
    <formula>Fcst_Contract_Materials_Quoted__c + Fcst_Contract_Materials_Non_Quoted__c + Fcst_Contract_Manual_Cost_Adjustment__c + Fcst_Mode_Adder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Base Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>