force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Delivery_Miles__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Delivery_Miles__c</fullName>
    <formula>Account__r.Standard_Delivery_Miles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Delivery Miles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>