force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Ext_Pur_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Ext_Pur_Warranty__c</fullName>
    <formula>Purchased_Warranty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Ext Pur Warranty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>