force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Gross_Margin__c</fullName>
    <formula>Current_Net_Revenue__c - Fcst_Contract_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>