force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Gross_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Gross_Margin_Pct__c</fullName>
    <formula>Fcst_Contract_Gross_Margin__c / Current_Net_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Gross Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>