force-app/main/default/objects/Sales_Order__c/fields/Fcst_Contract_Int_Std_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Fcst_Contract_Int_Std_Warranty__c</fullName>
    <formula>Margin_Assumption__r.Warranty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcst Contract - Int Std Warranty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>